k8s-manifests/03_statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio-ss
  namespace: kubes3
spec:
  replicas: 1
  serviceName: minio-srv
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: bitnami/minio
        ports:
        - containerPort: 9000
          name: minio-port
        volumeMounts:
        - name: minio-vol
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: minio-vol
    spec:
      # storageClassName: local-path
      storageClassName: openebs-hostpath
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
