k8s-manifests/04_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubes3-be-depl
  namespace: kubes3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubes3-be
  template:
    metadata:
      labels:
        app: kubes3-be
    spec:
      containers:
      - name: backend-container
        image: ghcr.io/xamma/kubes3-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: backend-port
      restartPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubes3-fe-depl
  namespace: kubes3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubes3-fe
  template:
    metadata:
      labels:
        app: kubes3-fe
    spec:
      containers:
      - name: frontend-container
        image: ghcr.io/xamma/kubes3-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: frontend-port
      restartPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubes3-thumbs-depl
  namespace: kubes3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubes3-thumbs
  template:
    metadata:
      labels:
        app: kubes3-thumbs
    spec:
      containers:
      - name: thumbs-container
        image: ghcr.io/xamma/kubes3-thumbs:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: thumbs-port
      restartPolicy: Always
