k8s-manifests/07_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubes3-ingress
  namespace: kubes3
spec:
  ingressClassName: nginx
  rules:
  - host: kubes3.k8sdev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubes3-frontend-srv
            port:
              number: 80
  tls:
  - hosts:
    - kubes3.k8sdev.local
    secretName: nginx-tls-secret
